--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -4,20 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
-    android:divider="?android:dividerHorizontal"
+    android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
     tools:context="net.area54labs.jadwalkrl2.MainActivity">
 
-    <fragment
+    <FrameLayout
         android:id="@+id/fragment_left"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2" />
 
-    <fragment
+    <FrameLayout
         android:id="@+id/fragment_right"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="4" />
-
 </LinearLayout>
