--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat">
         <!-- Customize your theme here. -->
     </style>
 
@@ -25,7 +25,7 @@
     </style>
 
     <!-- Header Style-->
-    <style name="AppTheme.Header">
+    <style name="AppTheme.Header" parent="Theme.AppCompat">
         <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -44,7 +44,7 @@
 
 
     <style name="AppTheme.Header.Search" parent="AppTheme.Header">
-        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:layout_marginBottom">0dp</item>
     </style>
 
     <style name="AppTheme.Header.Station" parent="AppTheme.Text.Dark">
@@ -90,7 +90,8 @@
     <!-- Input Style-->
     <style name="AppTheme.Input" />
 
-    <style name="AppTheme.Input.Time" parent="Widget.AppCompat.EditText">
+    <style name="AppTheme.Input.Time">
+        <item name="android:textColor">@android:color/primary_text_dark</item>
         <item name="android:maxLength">2</item>
         <item name="android:inputType">numberDecimal|numberSigned</item>
         <item name="android:layout_width">wrap_content</item>
