--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,8 +42,7 @@
         <item name="android:background">@color/accent</item>
     </style>
 
-
-    <style name="AppTheme.Header.Search" parent="AppTheme.Header">
+    <style name="AppTheme.Header.Search">
         <item name="android:layout_marginBottom">0dp</item>
     </style>
 
@@ -79,6 +78,7 @@
         <item name="android:gravity">center_vertical|left</item>
         <item name="android:background">@drawable/bg_primary_button</item>
         <item name="android:layout_height">32dp</item>
+
     </style>
 
     <style name="AppTheme.Button.SearchSwitcher">
